<resources>
    <string name="app_name">Catalyst</string>

    <string name="author">Nick Piscopio</string>
    <string name="copyright">&#169;2015. All Rights Reserved. Catalyst.</string>

    <string name="action_skip">Skip</string>
    <string name="action_done">Done</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="title_daily_inspiration">Inspirations</string>
    <string name="title_share">Share</string>
    <string name="title_created_by">Created by</string>
    <string name="title_version">Version</string>

    <string name="image_description">Image by %1$s from Pixabay.com</string>
    <string name="image_description_no_author">Image from Pixabay.com</string>

    <string name="description_app">An app designed to influence and inspire people in a positive manner.</string>
    <string name="description_daily_inspiration">Get inspired daily, weekly, or whenever you may need it!</string>
    <string name="description_share">Share inspirations with friends and family!</string>

    <!-- Dialog -->
    <string name="failure_description">Couldn\'t retrieve an inspirational image. Catalyst will try again for the next inspiration.</string>
    <string name="inspiration_loading">Generating inspirations is hard work. Please wait.</string>
    <string name="share_processing">Sharing inspirations is hard work. Please wait.</string>

    <!-- Settings -->
    <string name="settings_title">Inspiration Settings</string>
    <string name="settings_notification_title">Notifications</string>
    <string name="settings_notification_summary">Notify me when new inspirations are available</string>

    <string name="settings_interval_title">Notification Interval</string>

    <string name="settings_time_title">Notification Time</string>

    <string name="setting_inspire_sunday">Sunday</string>
    <string name="setting_inspire_monday">Monday</string>
    <string name="setting_inspire_tuesday">Tuesday</string>
    <string name="setting_inspire_wednesday">Wednesday</string>
    <string name="setting_inspire_thursday">Thursday</string>
    <string name="setting_inspire_friday">Friday</string>
    <string name="setting_inspire_saturday">Saturday</string>

    <string name="positive_set">Set</string>

    <string name="default_notification_flag">true</string>
    <string name="default_interval_time">36000000</string>

    <!-- Preference Keys -->
    <string name="preference_notification">preference_notification</string>
    <string name="preference_interval">preference_interval</string>
    <string name="preference_time">preference_time</string>

    <!-- Inspirations -->
    <string name="appearance_perfect">You are <b>perfect</b> the way you are!</string>
    <string name="appearance_beauty_in_and_out">You are <b>beautiful</b> inside and out!</string>
    <string name="appearance_beauty_different">You are <b>beautiful</b>! Remember that!</string>
    <string name="personality_great_friend">You are a great friend. <b>Don\'t forget it</b>!</string>
    <string name="positivity_simplify"><b>Simplify</b> life. Take it one step at a time.</string>
    <string name="positivity_believe"><b>Believe</b> in yourself!</string>
    <string name="positivity_exploring">Life is a <i>mystery</i>. Go exploring!</string>
    <string name="positivity_great_day">Great days are <b>relative</b>. If <i>you</i> believe it to be one, then it is!</string>
    <string name="positivity_favor">Stay <b>positive</b> because everything will work out in your favor.</string>
    <string name="positivity_conquer">This <i>is</i> your life; <b>conquer</b> it!</string>
    <string name="positivity_awesome">You\'re <b>awesome</b>! Don\'t forget it!</string>
    <string name="positivity_exist">You <b>exist</b>. You are a real person, and you <b>matter</b>!</string>
    <string name="positivity_mirror">Seize every day you can!</string>
    <string name="positivity_focus">Focus on the future because the past <i>is</i> the past, and there is nothing you can do about it now.</string>
    <string name="positivity_live"><b>Live</b> like you mean it!</string>
    <string name="positivity_uno">You <i>are</i> numero <b>uno</b>!</string>
    <string name="positivity_good_time">Have a good time. You <b>deserve</b> it!</string>
    <string name="positivity_world">The world <i>is</i> a little <b>better</b> just because you\'re in it!</string>
    <string name="positivity_today">Life <i>is</i> a little better just from knowing you!</string>
    <string name="positivity_make_today_count">Time <b>never</b> stops, so make every day count!</string>
    <string name="positivity_think_positive">Think <b>positive</b> thoughts!</string>
    <string name="success_focus_on_work"><b>Focus</b> on the good work you do!</string>
    <string name="success_great_job">You do a <b>great</b> job!</string>
    <string name="success_proud">Be <b>proud</b> of yourself!</string>
    <string name="success_good_work">You do good work!</string>
    <string name="success_forward">Keep moving <b>forward</b>!</string>
    <string name="success_success">You\'re a <b>success</b>!</string>
    <string name="success_destiny">Don\'t wait for <b>destiny</b> to come knocking at your door; <b>create</b> your own!</string>
    <string name="success_winner">You\'re a <b>winner</b>!</string>
    <string name="success_today">You\'ll do <b>great</b>!</string>
    <string name="success_no_failure">There is <i>no</i> failure as long as you <b>try</b>.</string>
    <string name="success_success_in_failure">There <i>is</i> <b>success</b> in failure. Search for it!</string>
    <string name="holiday_valentines">Happy Valentine\'s Day!</string>
    <string name="holiday_birthday">Happy Birthday!</string>
    <string name="holiday_new_years">I don\'t think you realize this yet, but this is going to be your year! Happy new year!</string>
    <string name="holiday_new_years_eve">Look back at your accomplishments this year. I\'m not going to lie, this was your year!</string>

</resources>