<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margins"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/margins"
            android:layout_marginBottom="@dimen/demo_image_margin"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/demo_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/title"
            android:layout_marginTop="@dimen/about_description_margin"
            style="@style/text_title_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_app"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="@dimen/about_description_margin"
            style="@style/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_created_by"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="@dimen/margins"
            style="@style/text_title_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_large"
            style="@style/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_version"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margins"
            style="@style/text_title_bold"/>

        <TextView
            android:id="@+id/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_small"
            style="@style/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margins"
            style="@style/text"/>

    </LinearLayout>

</ScrollView>